--- a/package.json
+++ b/package.json
@@ -6,5 +6,40 @@
         "Hydrogen <3038094028@qq.com>"
     ],
     "license": "MIT",
-    "private": true
+    "private": true,
+    "scripts": {
+        "dev": "vite"
+    },
+    "devDependencies": {
+        "@emotion/css": "^11.7.1",
+        "@types/mime": "^2.0.3",
+        "@types/node": "^17.0.10",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.10.0",
+        "@typescript-eslint/parser": "^5.10.0",
+        "@vitejs/plugin-vue": "^2.0.1",
+        "@vitejs/plugin-vue-jsx": "^1.3.3",
+        "esbuild": "^0.14.11",
+        "eslint": "^8.7.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-vue": "^8.3.0",
+        "execa": "^6.0.0",
+        "fs-extra": "^10.0.0",
+        "mime": "^3.0.0",
+        "pinia": "^2.0.9",
+        "rollup-plugin-esbuild": "^4.8.2",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.4",
+        "uuid": "^8.3.2",
+        "vite": "^2.7.12",
+        "vue": "^3.2.27",
+        "vue-router": "^4.0.12",
+        "vue-tsc": "^0.30.6"
+    },
+    "dependencies": {
+        "electron": "16.0.6",
+        "eslint-config-standard": "^16.0.3"
+    }
 }
