--- a/package.json
+++ b/package.json
@@ -3,15 +3,39 @@
     "version": "0.0.0",
     "authors": [
         "Cladonia Frontend Development Team",
-        "Hydrogen <3038094028@qq.com>"
+        "Hydrogen <mozaisoft@foxmail.com>"
     ],
     "license": "MIT",
     "private": true,
     "scripts": {
-        "dev": "vite"
+        "lint": "eslint src/*",
+        "lint-fix": "eslint --fix src/*",
+        "lint-staged": "lint-staged",
+        "build": "vite build",
+        "dev": "vue-tsc --noEmit && vite --debug"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "ignore": ["dist/**/*", "node_modules", "src/assets/**/*"],
+        "linters": {
+            "*.ts": ["eslint --fix", "git add"],
+            "*.js": ["eslint --cache --fix", "git add"],
+            "*.jsx": ["eslint --cache --fix", "git add"],
+            "*.tsx": ["eslint --cache --fix", "git add"],
+            "*.vue": ["eslint --cache --fix", "git add"]
+        }
     },
     "devDependencies": {
         "@emotion/css": "^11.7.1",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-eslint": "^8.0.1",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^13.1.3",
+        "@rollup/plugin-replace": "^3.0.1",
         "@types/mime": "^2.0.3",
         "@types/node": "^17.0.10",
         "@types/uuid": "^8.3.4",
@@ -19,27 +43,32 @@
         "@typescript-eslint/parser": "^5.10.0",
         "@vitejs/plugin-vue": "^2.0.1",
         "@vitejs/plugin-vue-jsx": "^1.3.3",
+        "chokidar": "^3.5.3",
         "esbuild": "^0.14.11",
         "eslint": "^8.7.0",
+        "eslint-config-standard": "^16.0.3",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-vue": "^8.3.0",
         "execa": "^6.0.0",
         "fs-extra": "^10.0.0",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.2.2",
         "mime": "^3.0.0",
         "pinia": "^2.0.9",
+        "rollup": "^2.65.0",
         "rollup-plugin-esbuild": "^4.8.2",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4",
         "uuid": "^8.3.2",
         "vite": "^2.7.12",
+        "vite-plugin-eslint": "^1.3.0",
         "vue": "^3.2.27",
         "vue-router": "^4.0.12",
         "vue-tsc": "^0.30.6"
     },
     "dependencies": {
-        "electron": "16.0.6",
-        "eslint-config-standard": "^16.0.3"
+        "electron": "16.0.6"
     }
 }
