--- a/package.json
+++ b/package.json
@@ -7,30 +7,33 @@
     ],
     "license": "MIT",
     "private": true,
+    "main": "dist/main/index.js",
     "scripts": {
         "lint": "eslint src/*",
         "lint-fix": "eslint --fix src/*",
-        "lint-staged": "lint-staged",
         "build": "vite build",
-        "dev": "vue-tsc --noEmit && vite --debug"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
-    "lint-staged": {
-        "ignore": ["dist/**/*", "node_modules", "src/assets/**/*"],
-        "linters": {
-            "*.ts": ["eslint --fix", "git add"],
-            "*.js": ["eslint --cache --fix", "git add"],
-            "*.jsx": ["eslint --cache --fix", "git add"],
-            "*.tsx": ["eslint --cache --fix", "git add"],
-            "*.vue": ["eslint --cache --fix", "git add"]
-        }
+        "dev": "vue-tsc --noEmit && vite",
+        "dist:all": "electron-builder -c ./electron-builder.json",
+        "dist:win": "electron-builder -w -c ./electron-builder.json",
+        "dist:mac": "electron-builder -m -c ./electron-builder.json",
+        "dist:linux": "electron-builder -l -c ./electron-builder.json",
+        "dist:win:x64": "electron-builder -w --x64 -c ./electron-builder.json",
+        "dist:mac:x64": "electron-builder -m --x64 -c ./electron-builder.json",
+        "dist:linux:x64": "electron-builder -l --x64 -c ./electron-builder.json",
+        "dist:win:ia32": "electron-builder -w --ia32 -c ./electron-builder.json",
+        "dist:mac:ia32": "electron-builder -m --ia32 -c ./electron-builder.json",
+        "dist:linux:ia32": "electron-builder -l --ia32 -c ./electron-builder.json",
+        "dist:win:armv7l": "electron-builder -w --armv7l -c ./electron-builder.json",
+        "dist:mac:armv7l": "electron-builder -m --armv7l -c ./electron-builder.json",
+        "dist:linux:armv7l": "electron-builder -l --armv7l -c ./electron-builder.json",
+        "dist:win:arm64": "electron-builder -w --arm64 -c ./electron-builder.json",
+        "dist:mac:arm64": "electron-builder -m --arm64 -c ./electron-builder.json",
+        "dist:linux:arm64": "electron-builder -l --arm64 -c ./electron-builder.json",
+        "postinstall": "electron-builder install-app-deps"
     },
     "devDependencies": {
         "@emotion/css": "^11.7.1",
+        "@rollup/plugin-alias": "^3.1.9",
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-eslint": "^8.0.1",
         "@rollup/plugin-json": "^4.1.0",
@@ -44,20 +47,21 @@
         "@vitejs/plugin-vue": "^2.0.1",
         "@vitejs/plugin-vue-jsx": "^1.3.3",
         "chokidar": "^3.5.3",
+        "electron-builder": "^22.14.5",
         "esbuild": "^0.14.11",
-        "eslint": "^8.7.0",
+        "eslint": "^7.12.1",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-vue": "^8.3.0",
         "execa": "^6.0.0",
+        "filesize": "^8.0.7",
         "fs-extra": "^10.0.0",
-        "husky": "^7.0.4",
-        "lint-staged": "^12.2.2",
         "mime": "^3.0.0",
+        "picocolors": "^1.0.0",
         "pinia": "^2.0.9",
-        "rollup": "^2.65.0",
+        "rollup": "2",
         "rollup-plugin-esbuild": "^4.8.2",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4",
