--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
         "lint-fix": "eslint --fix src/*",
         "build": "vite build",
         "dev": "vue-tsc --noEmit && vite",
-        "dist:all": "electron-builder -c ./electron-builder.json",
-        "dist:win": "electron-builder -w -c ./electron-builder.json",
-        "dist:mac": "electron-builder -m -c ./electron-builder.json",
-        "dist:linux": "electron-builder -l -c ./electron-builder.json",
-        "dist:win:x64": "electron-builder -w --x64 -c ./electron-builder.json",
-        "dist:mac:x64": "electron-builder -m --x64 -c ./electron-builder.json",
-        "dist:linux:x64": "electron-builder -l --x64 -c ./electron-builder.json",
-        "dist:win:ia32": "electron-builder -w --ia32 -c ./electron-builder.json",
-        "dist:mac:ia32": "electron-builder -m --ia32 -c ./electron-builder.json",
-        "dist:linux:ia32": "electron-builder -l --ia32 -c ./electron-builder.json",
-        "dist:win:armv7l": "electron-builder -w --armv7l -c ./electron-builder.json",
-        "dist:mac:armv7l": "electron-builder -m --armv7l -c ./electron-builder.json",
-        "dist:linux:armv7l": "electron-builder -l --armv7l -c ./electron-builder.json",
-        "dist:win:arm64": "electron-builder -w --arm64 -c ./electron-builder.json",
-        "dist:mac:arm64": "electron-builder -m --arm64 -c ./electron-builder.json",
-        "dist:linux:arm64": "electron-builder -l --arm64 -c ./electron-builder.json",
+        "clean": "del-cli pack",
+        "pack:all": "electron-builder -c ./electron-builder.json",
+        "pack:win": "electron-builder -w -c ./electron-builder.json",
+        "pack:mac": "electron-builder -m -c ./electron-builder.json",
+        "pack:linux": "electron-builder -l -c ./electron-builder.json",
+        "pack:win:x64": "electron-builder -w --x64 -c ./electron-builder.json",
+        "pack:mac:x64": "electron-builder -m --x64 -c ./electron-builder.json",
+        "pack:linux:x64": "electron-builder -l --x64 -c ./electron-builder.json",
+        "pack:win:ia32": "electron-builder -w --ia32 -c ./electron-builder.json",
+        "pack:mac:ia32": "electron-builder -m --ia32 -c ./electron-builder.json",
+        "pack:linux:ia32": "electron-builder -l --ia32 -c ./electron-builder.json",
+        "pack:win:armv7l": "electron-builder -w --armv7l -c ./electron-builder.json",
+        "pack:mac:armv7l": "electron-builder -m --armv7l -c ./electron-builder.json",
+        "pack:linux:armv7l": "electron-builder -l --armv7l -c ./electron-builder.json",
+        "pack:win:arm64": "electron-builder -w --arm64 -c ./electron-builder.json",
+        "pack:mac:arm64": "electron-builder -m --arm64 -c ./electron-builder.json",
+        "pack:linux:arm64": "electron-builder -l --arm64 -c ./electron-builder.json",
+        "serve": "electron .",
         "postinstall": "electron-builder install-app-deps"
     },
     "devDependencies": {
@@ -47,6 +49,8 @@
         "@vitejs/plugin-vue": "^2.0.1",
         "@vitejs/plugin-vue-jsx": "^1.3.3",
         "chokidar": "^3.5.3",
+        "del-cli": "^4.0.1",
+        "electron": "^16.0.7",
         "electron-builder": "^22.14.5",
         "esbuild": "^0.14.11",
         "eslint": "^7.12.1",
@@ -72,7 +76,5 @@
         "vue-router": "^4.0.12",
         "vue-tsc": "^0.30.6"
     },
-    "dependencies": {
-        "electron": "16.0.6"
-    }
+    "dependencies": {}
 }
