--- a/package.json
+++ b/package.json
@@ -46,10 +46,9 @@
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.10.0",
         "@typescript-eslint/parser": "^5.10.0",
+        "@vitectron/plugin": "^0.1.1",
         "@vitejs/plugin-vue": "^2.0.1",
         "@vitejs/plugin-vue-jsx": "^1.3.3",
-        "chokidar": "^3.5.3",
-        "del-cli": "^4.0.1",
         "electron": "^16.0.7",
         "electron-builder": "^22.14.5",
         "esbuild": "^0.14.11",
@@ -59,13 +58,9 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-vue": "^8.3.0",
-        "execa": "^6.0.0",
-        "filesize": "^8.0.7",
-        "fs-extra": "^10.0.0",
         "mime": "^3.0.0",
-        "picocolors": "^1.0.0",
         "pinia": "^2.0.9",
-        "rollup": "2",
+        "rollup": "^2.66.0",
         "rollup-plugin-esbuild": "^4.8.2",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4",
